# pytest-pvcr

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-to-pypi.yml
src/pytest_pvcr/: __init__.py  plugin.py  recordings.py  wrapper.py
tests/: test_encoding.py  test_fuzzy.py  test_plugin.py  test_recording.py  test_recordings.py
